added music and mobile responsive

--- a/src/pages/card/card.css
+++ b/src/pages/card/card.css
@@ -45,6 +45,7 @@
     cursor: pointer;
     transition: 0.3s;
     font-weight: 600;
+    font-family: "DM Sans", sans-serif;
   }
   
   .close-button:hover {
