--- a/src/pages/question/Question.css
+++ b/src/pages/question/Question.css
@@ -132,9 +132,9 @@ img:hover {
 }
 
 .question-buttons {
-    display: flex;
     flex-direction: row;
     gap: 50px;
+    width: max-content;
 }
 
 .question-button-no {
@@ -148,12 +148,12 @@ img:hover {
     transition: transform all 0.3s ease, box-shadow 0.3s ease;
     font-weight: bold;
     text-align: center;
-    z-index: 0;
+    z-index: -10;
 }
 
 .question-button-yes {
     font-family: "DM Sans", sans-serif;
-    padding: 40px 100px;
+    padding: 80px 200px;
     border-radius: 100px;
     border: none;
     outline: none;
@@ -162,7 +162,7 @@ img:hover {
     transition: transform 0.1s ease-out, box-shadow 0.3s ease;
     font-weight: bold;
     text-align: center;
-    z-index: 1;
+    z-index: 10;
 }
 
 .question-button-yes {
@@ -460,7 +460,7 @@ img:hover {
     mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .54) 80%); 
     position:absolute;
     left: 70vw;
-    top: 125%;
+    top: 115%;
     scale: 0.8;
     opacity: 50%;
 }
@@ -478,7 +478,7 @@ img:hover {
     mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .54) 30%); 
     position:absolute;
     left: 80vw;
-    top: 175%;
+    top: 165%;
     scale: 0.9;
     opacity: 40%;
 }
